update Y0820A0