@@ -1,4 +1,6 @@
-apply plugin: 'java'
+plugins {
+	id "java"
+}
 
 sourceSets.main {
 	java.srcDirs = ['src/']
@@ -11,6 +13,11 @@ repositories {
 	maven { url 'https://www.jitpack.io' }
 }
 
+java {
+	targetCompatibility = JavaVersion.VERSION_1_8
+	sourceCompatibility = JavaVersion.VERSION_1_8
+}
+
 dependencies {
 	implementation "com.github.Anuken.Arc:arc-core:$mindustryVersion"
 	implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
@@ -18,21 +25,4 @@ dependencies {
 
 tasks.withType(JavaCompile).configureEach {
 	options.encoding = 'UTF-8'
-	options.compilerArgs.addAll([
-			"--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-			"--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-			"--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-			"--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-			"--add-exports", "jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
-			"--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-			"--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-			"--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-			"--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-			"--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-			"--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-			"--add-exports", "java.base/sun.reflect.annotation=ALL-UNNAMED"
-	])
-
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
 }
